Change the copy right

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,8 +5,7 @@
   </a>
 </div>
 <footer class="footer">
-  COPYRIGHT (C) <a href="https://blog.lulab.net">DONGGEUN,BANG (LUBANG).</a><br />
-  ALL RIGHTS RESERVED.
+  (C) <a href="https://joone.github.io"> Joone Hur</a><br />
 </footer>
 </body>
 </html>
