--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -69,10 +69,9 @@
     </div>
     <div id="menu" class="menu hidden">
       <ul>
-        <li><a href="{{ "/" | relURL }}">#{{ .Site.Title }}</a></li>
-        <li><a href="{{ "/categories" | relURL }}">#{{ i18n "menuCategories" }}</a></li>
-        <li><a href="{{ "/tags" | relURL }}">#{{ i18n "menuTags" }}</a></li>
-        <li><a href="{{ "/projects" | relURL }}">#{{ i18n "menuProjects" }}</a></li>        
+        <li><a href="{{ "/" | relURL }}">{{ .Site.Title }}</a></li>
+        <li><a href="{{ "/categories" | relURL }}">{{ i18n "menuCategories" }}</a></li>
+        <li><a href="{{ "/tags" | relURL }}">{{ i18n "menuTags" }}</a></li>
       </ul>
       <input class="search" id="search-input" type="search" placeholder="{{ i18n "menuSearchKeyword" }}" value="">
     </div>
