--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -170,8 +170,8 @@ img {
   line-height: 2.1em;
 }
 .post .post-meta h1 {
-  color: #00b2a0;
-  margin: -4px 0px 40px 0px;
+  color: #0a0a0a;
+  margin: -4px 0px 20px 0px;
   line-height: 1.2em;
 }
 .post .post-meta time {
