--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -69,16 +69,17 @@
     </div>
   </div>  
   {{ if not .Site.BuildDrafts }}
-  <div class="post-comment">  
-    <script src="https://utteranc.es/client.js"
-        repo="joone/joone.github.io"
-        issue-term="pathname"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-    </script>
+  <div class="post-comment">    
+    {{ template "_internal/disqus.html" . }}    
   </div>
   {{ end }}
+  <script src="https://utteranc.es/client.js"
+      repo="joone/joone.github.io"
+      issue-term="pathname"
+      theme="github-light"
+      crossorigin="anonymous"
+      async>
+  </script>
   <div class="recommend-articles">
     {{ i18n "postRecommendArticles"}}
     <ul>
